# BackLang

./: .gitignore  Cargo.toml  EXTENSION_COMPLETE.txt  EXTENSION_SUMMARY.md  EXTENSION_SUMMARY_FR.md  INSTALL.md  LICENSE  README.md  bl-pkg  install.bat  install.ps1  install.sh  install_vscode_ext.sh  server.bl  setup_vscode.sh  test.bl  test_debug.bl  test_final.bl  test_port.bl  test_simple.bl  test_std.bl
.github/workflows/: release.yml
bench/: http.bl
docs/: Benchmarks.md  CLI.md  Downloads.md  Examples.md  HTTP-Server.md  Installation.md  Language.md  Quick-Start.md  README.md  Standard-Library.md  VS-Code.md  _sidebar.md  index.html
src/: debugger.rs  interpreter.rs  lexer.rs  main.rs  parser.rs  server.rs
std/: fs.bl  math.bl  os.bl  random.bl  string.bl
vscode-extension/: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  FILE_STRUCTURE.md  INSTALLATION.md  LICENSE  MANIFEST.sh  PROJECT_OVERVIEW.ts  QUICKSTART.md  README.md  SUMMARY.md  TESTING.md  install.bat  install.sh  language-configuration.json  package-lock.json  package.json  publish.sh  snippets.json  tsconfig.json
vscode-extension/examples/: demo.bl  server_example.bl
vscode-extension/src/: debugAdapter.ts  extension.ts
vscode-extension/syntaxes/: backlang.tmLanguage.json
