[package]
name = "backlang"
version = "1.0.0"
edition = "2021"
description = "BackLang - Simple backend language with its own runtime"
authors = ["BackLang Team"]
license = "MIT"

[[bin]]
name = "bl"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["trace", "cors"] }
rand = "0.8"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }